[package]
name = "cfwidget"
version = "1.0.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A simple Rust client for cfwidget.com"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["rustls", "json"] }
semver = { version = "0.11.0", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
failure = "0.1.8"